Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/Include/BTI1553NET.CS


        private static class BTI1553_32
        {
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCConfig@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCConfig(UInt32 configval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCConfigEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCConfigEx(UInt32 configval, UInt16 count, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCConfigMsg@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_BCConfigMsg(UInt32 configval, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCCreateList@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_BCCreateList(UInt32 listconfigval, Int32 count, UInt32 msgconfigval, UInt16 cwd1, UInt16 cwd2, UInt16[] data, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCCreateMsg@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_BCCreateMsg(UInt32 configval, UInt16 cwd1, UInt16 cwd2, UInt16[] data, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCPause@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI1553_BCPause(Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCPauseCheck@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCPauseCheck(Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCResume@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI1553_BCResume(Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCSchedAgain@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedAgain(Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCSchedBranch@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedBranch(UInt32 condition, Int32 destindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCSchedBranchUpdate@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedBranchUpdate(Int32 destindex, Int32 opcodeindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCSchedBuild@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedBuild(UInt16 nummsgs, UInt32[] msgaddr, UInt16[] freq, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCSchedCall@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedCall(UInt32 condition, Int32 destindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCSchedCallUpdate@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedCallUpdate(Int32 destindex, Int32 opcodeindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCSchedEntry@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedEntry(Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCSchedFrame@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedFrame(UInt32 timeval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCSchedFrameEnd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedFrameEnd(Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCSchedFrameStart@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedFrameStart(UInt32 timeval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCSchedGap@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedGap(UInt16 gapval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCSchedHalt@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedHalt(Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCSchedLog@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedLog(UInt32 condition, UInt16 tagval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCSchedMsg@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedMsg(UInt32 msgaddr, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCSchedPause@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedPause(Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCSchedPulse@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedPulse(Int32 dionum, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCSchedPulse0@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedPulse0(Int32 dionum, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCSchedPulse1@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedPulse1(Int32 dionum, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCSchedRestart@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedRestart(Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCSchedRetry@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedRetry(UInt32 condition, UInt16 retries, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCSchedReturn@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSchedReturn(Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCSetDefaultGap@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSetDefaultGap(Int32 gapval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCSetTimeout@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSetTimeout(UInt16 timeoutval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCSyncDefine@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCSyncDefine(Int32 enableflag, UInt16 syncmask, UInt16 pinpolarity, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCTransmitList@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCTransmitList(ref XMITFIELDS1553 xmitfieldsval, Int32 count, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCTransmitMsg@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCTransmitMsg(ref XMITFIELDS1553 xmitfieldsval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_BCTriggerDefine@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_BCTriggerDefine(Int32 enableflag, UInt16 trigmask, UInt16 trigval, UInt16 pinpolarity, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ChGetCount@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI1553_ChGetCount(ref Int32 a_count, ref Int32 b4_count, ref Int32 b32_count, ref Int32 c_count, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ChGetInfo@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_ChGetInfo(UInt16 infotype, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ChIs1553@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ChIs1553(Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ChIsA@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ChIsA(Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ChIsB32@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ChIsB32(Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ChIsB4@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ChIsB4(Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ChIsBM@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ChIsBM(Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ChIsC@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ChIsC(Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ChIsD@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ChIsD(Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ChIsM@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ChIsM(Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ChIsP@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ChIsP(Int32 channum, IntPtr handleval);
